# emby-sub

./: .gitignore  Dockerfile  README.md  docker-compose.yml
back-end/: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
back-end/alembic/: env.py
back-end/alembic/versions/: 4f4745077271_add_specific_season_to_.py
back-end/docs/: conf.py  index.rst
back-end/src/: main.py
back-end/src/backend/: db.py  main.py  models.py  settings.py
back-end/src/backend/api/: auth.py  deps.py  media.py  notifications.py  requests.py
back-end/src/backend/core/: security.py
back-end/src/backend/jobs/: check_media.py
back-end/src/backend/services/: approval.py  emby.py  scheduler.py  tmdb.py
back-end/tests/: __init__.py  test_media_latest.py
front-end/: package-lock.json  package.json  vite.config.ts
front-end/src/: App.vue  main.ts  scrollbar.css  style.css
front-end/src/components/: HeartIcon.vue  LoadingDots.vue  MediaCard.vue  MediaSlider.vue  Navbar.vue  SearchModal.vue
front-end/src/layout/: AppLayout.vue  Sidebar.vue  Topbar.vue
front-end/src/router/: index.ts
front-end/src/stores/: auth.ts  media.ts  ui.ts
front-end/src/utils/: http.ts
front-end/src/views/: AdminView.vue  DetailsView.vue  HomeView.vue  LoginView.vue  MoreMediaView.vue  PersonView.vue  RequestsView.vue  SearchView.vue
